--- a/masterpc/static/css/styles.css
+++ b/masterpc/static/css/styles.css
@@ -34,6 +34,7 @@ main {
 	.img-list { height: 100px; }
 	.list-card-title { font-size: 16px; }
 	.list-card-price { font-size: 14px; }
+	.pc-name { font-size: 20px; }
 
 	
 }
