--- a/masterpc/templates/user/index.html
+++ b/masterpc/templates/user/index.html
@@ -20,7 +20,7 @@
     <div class="row">
       <div class="col-sm-12 col-lg-6">
       
-        <h4 class="text-light my-4"> Mis PCs
+        <h4 class="text-light my-4"> <i class="fas fa-desktop"></i> Mis PCs
           <a href="{% url 'create_pc' %}" class="btn btn-outline-warning btn-sm float-right rounded-pill px-3">
             <i class="fas fa-plus"></i> Agregar
           </a>
@@ -69,7 +69,7 @@
             </div>
             <div class="card-footer py-1 text-center">
               <span class="m-2">Presupuesto:
-                <span> {% if pc.budget %}  $ {{pc.budget}}  {% else  %} - {% endif %} </span>
+                <span> {% if pc.budget %}  $ {{pc.budget}}  {% else  %} <i class="far fa-question-circle"></i> {% endif %} </span>
               </span>
               <span class="m-2 font-weight-bold text-nowrap">Costo: $ {{ pc|cost }}</span>
             </div>
