--- a/masterpc/templates/user/component_view/table.html
+++ b/masterpc/templates/user/component_view/table.html
@@ -171,7 +171,7 @@
       {% if pc.storage.count %}
       {% for s in pc.storage.all %}
       <tr>
-        <td>{{ s }}</td>
+        <td>{{ s.storage }}</td>
         <td>$ {{s.price}}</td>
         <td class="py-2">
           <a href="{{s.url}}" class="text-light" target="_blank">
